Fixes post-meta overlapping navbar when no cover photo

--- a/public/src/css/main.less
+++ b/public/src/css/main.less
@@ -65,6 +65,7 @@ nav {
 	border-bottom: 1px outset #e0e0e0;
 	min-height: 48px;
 	padding: 0 !important;
+	z-index: 3;
 	
 	a {
 		color: rgb(67, 57, 10);
@@ -137,7 +138,7 @@ nav {
 /* Post View */
 
 .post-view {
-	margin: 74px auto;
+	margin: 98px auto;
 	max-width: 86%;
 	
 	@media @desktop {
